--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link active" aria-current="page" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://github.com/pierre-pellegrino">Qui sommes-nous ?</a>
+              <a class="nav-link" href="#article-2">Qui sommes-nous ?</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nos produits</a>
@@ -49,12 +49,137 @@
     <div class="jumbotron pt-5">
       <h1 class="display-4 text-center fw-normal pt-5 pb-3 text-white title">bootstrap fuel</h1>
       <div class="lead text-center hero-btns">
-        <a class="btn btn-secondary" href="#" role="button">Goûter la boisson</a>
-        <a class="btn btn-outline-secondary" target="_blank" href="https://github.com/pierre-pellegrino" role="button">Nous contacter</a>
+        <a class="btn btn-warning btn-pulse" href="#" role="button">Goûter la boisson</a>
+        <a class="btn btn-outline-warning" target="_blank" href="https://github.com/pierre-pellegrino" role="button">Nous contacter</a>
       </div>
-      <img class="arrow-down" src="img/arrow-down.svg" alt="arrow down">
+      <a href="#article-1"><img class="arrow-down" src="img/arrow-down.svg" alt="arrow down"></a>
     </div>
+
+    <!-- Main Content -->
+    <main>
+      <div class="article-title">
+        <h2 class="text-center align-items-center">Nos meilleures ventes</h2>
+      </div>
+      <div id="article-1" class="container-fluid article-1 bg-white">
+        <div class="row row-1 h-50">
+          <div class="col col-fl">
+            <img class="eclair" src="img/eclair-detoure.png" alt="eclair">
+            <div class="products-imgs d-flex">
+              <img class="product-img" src="img/standard-profile.png" alt="regular can profile">
+              <img class="product-img" src="img/standard-face.png" alt="regular can face">
+            </div>
+          </div>
+          <div class="col col-fl">
+            <h2 class="lead">Bootstrap Fuel Original</h3>
+            <p class="lead">Frais, comme ton code.</p>
+            <p class="grey">Boisson énergisante, riche en vitamines et minéraux.</p>
+            <p class="grey">C'est LA boisson qui te permet de comprendre comment fonctionne Bootstrap.</p>
+            <p> <span class="vitamine">B2</span> <span class="vitamine">B3</span> <span class="vitamine">B6</span></p>
+          </div>
+        </div>
+        <div class="row row-2 h-50">
+          <div class="col col-fl">
+            <div class="products-imgs d-flex">
+              <img class="eclair" src="img/eclair-detoure.png" alt="eclair">
+              <img class="product-img" src="img/apple-profile.png" alt="apple can profile">
+              <img class="product-img" src="img/apple-face.png" alt="apple can face">
+            </div>
+          </div>
+          <div class="col col-fl">
+            <h2 class="lead">Bootstrap Fuel Apple Flavour</h3>
+            <p class="lead">Il est pommé, pas toi.</p>
+            <p class="grey">Boisson énergisante, riche en vitamines et minéraux.</p>
+            <p class="grey">Maîtrise le responsive en profitant d'un bon goût de pommes.</p>
+            <p> <span class="vitamine">B2</span> <span class="vitamine">B3</span> <span class="vitamine">B5</span> <span class="vitamine">B6</span></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="article-title bg-dark">
+        <h2 class="text-center align-items-center text-white">Qui sommes-nous ?</h2>
+      </div>
+
+      <div id="article-2" class="article-2 container-fluid bg-dark">
+        <div class="row pt-5">
+          <div class="col light">
+            <div class="card-profile">
+              <img src="img/p1.jpg" class="profile-pic" alt="profile pic">
+              <p>Pierre PELLEGRINO</p>
+              <p class="lead">Directeur Général</p>
+            </div>
+          </div>
+
+          <div class="col light">
+            <div class="card-profile">
+              <img src="img/p2.jpg" class="profile-pic" alt="profile pic">
+              <p>Alexandre CASADEI</p>
+              <p class="lead">Directeur RH</p>
+            </div>
+          </div>
+
+          <div class="col light">
+            <div class="card-profile">
+              <img src="img/p4.jpg" class="profile-pic" alt="profile pic">
+              <p>Marc MARTIN</p>
+              <p class="lead">Community Manager</p>
+            </div>
+          </div>
+
+          <div class="col light">
+            <div class="card-profile">
+              <img src="img/p5.jpg" class="profile-pic" alt="profile pic">
+              <p>Lucas OUDART</p>
+              <p class="lead">Bêta-testeur</p>
+            </div>
+          </div>
+
+          <div class="col light">
+            <div class="card-profile">
+              <img src="img/p6.jpg" class="profile-pic" alt="profile pic">
+              <p>Cédric LE NET</p>
+              <p class="lead">Livreur</p>
+            </div>
+          </div>
+
+          <div class="col light">
+            <div class="card-profile">
+              <img src="img/p3.jpg" class="profile-pic" alt="profile pic">
+              <p>Laurent CHAMOULEAU</p>
+              <p class="lead">Avocat</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row pt-5 justify-content-center history">
+          <p class="text-white text-center">
+            Créée en 2021, l'entreprise Bootstrap Fuel voit le jour suite à un projet de financement participatif ayant engrangé plus de 800.000€.
+          </p>
+          <p class="text-white text-center">
+            Notre équipe <span class="small-history">qui galère aussi sur Bootstrap</span> vous propose une large variété de boissons énergisantes.
+            Fruit de cinq années de travail par nos chimistes en intérim, ces canettes riches en vitamines et en caféine sauront vous maintenir éveillés pendant
+            vos heures de débug nocturne, et vous permettront même de comprendre le fonctionnement des grid et du comportement responsive sous Bootstrap.
+          </p>
+          <p class="text-white text-center">
+            Commandez dès aujourd'hui vos canettes et devenez un développeur accompli.
+          </p>
+          <a class="btn btn-lg btn-warning btn-bottom mt-5 mb-5" target="_blank" href="https://github.com/pierre-pellegrino" role="button">Commander</a>
+
+
+          <h2 class="light text-center pt-5 mt-5">Abonne-toi à la Newsletter</h2>
+          <div class="mt-3 justify-content-center newsletter-wrapper">
+            <label for="exampleFormControlInput1" class="form-label light">Entrez votre adresse mail pour recevoir nos promotions :</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nom@monmail.fr">
+            <a class="btn btn-warning btn-bottom mt-5 mb-5 text btn-news" target="_blank" href="https://github.com/pierre-pellegrino" role="button">Je m'abonne</a>
+
+            <p class="footer-text light mt-5 pt-5">Site créé avec ❤ par <a class="footer-link light" target="_blank" href="https://github.com/pierre-pellegrino">Pierre PELLEGRINO</a> pour la formation The Hacking Project.</p>
+          </div>
+        </div>
+        
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="script.js"></script>
   </body>
