Ajout du responsive

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       <div id="article-1" class="container-fluid article-1 bg-white">
         <div class="row row-1 h-50">
           <div class="col col-fl">
-            <img class="eclair" src="img/eclair-detoure.png" alt="eclair">
+            <img class="eclair not-on-small-screens" src="img/eclair-detoure.png" alt="eclair">
             <div class="products-imgs d-flex">
-              <img class="product-img" src="img/standard-profile.png" alt="regular can profile">
+              <img class="product-img not-on-small-screens" src="img/standard-profile.png" alt="regular can profile">
               <img class="product-img" src="img/standard-face.png" alt="regular can face">
             </div>
           </div>
@@ -80,8 +80,8 @@
         <div class="row row-2 h-50">
           <div class="col col-fl">
             <div class="products-imgs d-flex">
-              <img class="eclair" src="img/eclair-detoure.png" alt="eclair">
-              <img class="product-img" src="img/apple-profile.png" alt="apple can profile">
+              <img class="eclair not-on-small-screens" src="img/eclair-detoure.png" alt="eclair">
+              <img class="product-img not-on-small-screens" src="img/apple-profile.png" alt="apple can profile">
               <img class="product-img" src="img/apple-face.png" alt="apple can face">
             </div>
           </div>
@@ -101,7 +101,7 @@
 
       <div id="article-2" class="article-2 container-fluid bg-dark">
         <div class="row pt-5">
-          <div class="col light">
+          <div class="col-lg-2 col-md-4 light">
             <div class="card-profile">
               <img src="img/p1.jpg" class="profile-pic" alt="profile pic">
               <p>Pierre PELLEGRINO</p>
@@ -109,7 +109,7 @@
             </div>
           </div>
 
-          <div class="col light">
+          <div class="col-lg-2 col-md-4 light">
             <div class="card-profile">
               <img src="img/p2.jpg" class="profile-pic" alt="profile pic">
               <p>Alexandre CASADEI</p>
@@ -117,7 +117,7 @@
             </div>
           </div>
 
-          <div class="col light">
+          <div class="col-lg-2 col-md-4 light">
             <div class="card-profile">
               <img src="img/p4.jpg" class="profile-pic" alt="profile pic">
               <p>Marc MARTIN</p>
@@ -125,7 +125,7 @@
             </div>
           </div>
 
-          <div class="col light">
+          <div class="col-lg-2 col-md-4 light">
             <div class="card-profile">
               <img src="img/p5.jpg" class="profile-pic" alt="profile pic">
               <p>Lucas OUDART</p>
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col light">
+          <div class="col-lg-2 col-md-4 light">
             <div class="card-profile">
               <img src="img/p6.jpg" class="profile-pic" alt="profile pic">
               <p>Cédric LE NET</p>
@@ -141,7 +141,7 @@
             </div>
           </div>
 
-          <div class="col light">
+          <div class="col-lg-2 col-md-4 light">
             <div class="card-profile">
               <img src="img/p3.jpg" class="profile-pic" alt="profile pic">
               <p>Laurent CHAMOULEAU</p>
@@ -151,16 +151,16 @@
         </div>
 
 
-        <div class="row pt-5 justify-content-center history">
-          <p class="text-white text-center">
+        <div class="row pt-5 justify-content-center history bg-dark">
+          <p class="text-white text-center ps-3 pe-3">
             Créée en 2021, l'entreprise Bootstrap Fuel voit le jour suite à un projet de financement participatif ayant engrangé plus de 800.000€.
           </p>
-          <p class="text-white text-center">
+          <p class="text-white text-center ps-3 pe-3">
             Notre équipe <span class="small-history">qui galère aussi sur Bootstrap</span> vous propose une large variété de boissons énergisantes.
             Fruit de cinq années de travail par nos chimistes en intérim, ces canettes riches en vitamines et en caféine sauront vous maintenir éveillés pendant
             vos heures de débug nocturne, et vous permettront même de comprendre le fonctionnement des grid et du comportement responsive sous Bootstrap.
           </p>
-          <p class="text-white text-center">
+          <p class="text-white text-center ps-3 pe-3">
             Commandez dès aujourd'hui vos canettes et devenez un développeur accompli.
           </p>
           <a class="btn btn-lg btn-warning btn-bottom mt-5 mb-5" target="_blank" href="https://github.com/pierre-pellegrino" role="button">Commander</a>
