--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
           </p>
           <a class="btn btn-lg btn-warning btn-bottom mt-5 mb-5" target="_blank" href="https://github.com/pierre-pellegrino" role="button">Commander</a>
 
+          <div><img class="official-logo text" src="img/logo-rounded.png" alt="official logo"></div>
 
           <h2 class="light text-center pt-5 mt-5">Abonne-toi à la Newsletter</h2>
           <div class="mt-3 justify-content-center newsletter-wrapper">
